# UnrealCortex

./: .gitignore  README.md  UnrealCortex.uplugin
MCP/: README.md  pyproject.toml
MCP/.cortex/schema/: _catalog.md  blueprints.md
MCP/scripts/: sync_fallback.py
MCP/src/cortex_mcp/: _fallback_generated.py  capabilities.py  pagination.py  process_cleanup.py  project.py  response.py  schema_generator.py  server.py  tcp_client.py
MCP/tests/: conftest.py  test_blueprint_analysis.py  test_blueprint_composites.py  test_blueprint_structure_tools.py  test_call_count_reduction.py  test_capabilities.py  test_class_defaults.py  test_cleanup_migration_tools.py  test_composite_docstrings.py  test_composites.py  test_data_import_queues.py  test_deferred.py  test_e2e.py  test_editor_e2e.py  test_editor_lifecycle.py  test_file_cache.py  test_gen_compose.py  test_graph_layout.py  test_graph_tools.py  test_level_batch.py  test_level_blueprint.py  test_level_e2e.py  test_level_hints.py  test_level_tools.py  test_material_composites.py  test_material_composites_e2e.py  test_material_dynamic.py  test_material_enum_aliases.py  test_material_instance_composites_e2e.py  test_material_verification.py  test_mcp_scenarios.py  test_migration_tools.py  test_migration_wrappers.py  test_multi_editor_tools.py  test_pie_tools.py  test_project.py  test_qa_response_schemas.py  test_qa_tools.py  test_reflect_impact.py  test_reflect_tools.py  (+12 more)
MCP/tests/fixtures/: capabilities_cache_full.json  capabilities_cache_minimal.json  health_actor_batch_request.json  health_actor_composite_request.json  (+7 more)
(+932 files in other folders)
