[project]
name = "cortex-mcp"
version = "0.1.0"
description = "MCP server for UnrealCortex - AI-powered Unreal Engine development"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
]

[project.scripts]
cortex-mcp = "cortex_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cortex_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "anyio[trio]>=4.0",
]

[tool.pytest.ini_options]
markers = [
    "e2e: requires running Unreal Editor",
    "scenario: multi-step MCP workflow tests",
    "stress: long-running performance tests",
]
